# gzip-header

./: Cargo.toml  README.md
src/: crc_reader.rs  lib.rs
